# clipdash

./: .gitignore  Cargo.toml  README.md  TODO.md  架构.md
.github/workflows/: ci.yml  release.yml
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/backend/tests/: contract_spec.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: history.rs  lib.rs
crates/core/tests/: history_spec.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/tests/: store_spec.rs
crates/ui/: Cargo.toml
crates/ui/src/: gtk_app.rs  main.rs
packaging/: clipdash-daemon.desktop  clipdash-menu-gtk.desktop  clipdash-menu.desktop  clipdashd.service
scripts/: clipdash_menu.sh  gnome_bind_super_v.sh  gnome_switch_to_ui.sh  install_dev.sh  package_release.sh  setup_ubuntu_20_04.sh  uninstall_dev.sh
