[package]
name = "clipdash-cli"
version = "0.0.1"
edition = "2021"
description = "Clipdash CLI: control daemon, list/get/copy clipboard entries, menu UI trigger"
authors = ["syuchua <syuchua233@gmail.com>"]
license = "MIT OR Apache-2.0"

[package.metadata.deb]
section = "utils"
priority = "optional"
maintainer = "syuchua <syuchua233@gmail.com>"
revision = ""
assets = [
    ["target/release/clipdash", "/usr/bin/clipdash", "755"],
    ["../../packaging/clipdash-menu.desktop", "/usr/share/applications/clipdash-menu.desktop", "644"],
]

[dependencies]
clipdash-daemon = { path = "../daemon" }

[[bin]]
name = "clipdash"
path = "src/main.rs"
