[package]
name = "clipdash-daemon"
version = "0.0.1"
edition = "2021"
description = "Clipdash daemon: clipboard watcher and IPC server"
authors = ["syuchua <syuchua233@gmail.com>"]
license = "MIT OR Apache-2.0"

[package.metadata.deb]
section = "utils"
priority = "optional"
maintainer = "syuchua <syuchua233@gmail.com>"
revision = ""
assets = [
    ["target/release/clipdash-daemon", "/usr/bin/clipdash-daemon", "755"],
    ["../../packaging/clipdashd.service", "/usr/lib/systemd/user/clipdashd.service", "644"],
]

[dependencies]
clipdash-core = { path = "../core" }
clipdash-store = { path = "../store" }
clipdash-backend = { path = "../backend" }
base64 = "0.21"

[dev-dependencies]


[[bin]]
name = "clipdash-daemon"
path = "src/main.rs"
